CMAKE_MINIMUM_REQUIRED(VERSION 3.25)
PROJECT(Integrator)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED True)



FIND_PACKAGE( Boost 1.81 COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES( include ${Boost_INCLUDE_DIR} ${} )

ADD_EXECUTABLE( Integrator main.cpp physics_sim.cpp )

TARGET_LINK_LIBRARIES( Integrator LINK_PUBLIC ${Boost_LIBRARIES} )
